--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "next-video": "^1.2.0",
+    "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
