--- a/package.json
+++ b/package.json
@@ -32,9 +32,6 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
-  "engines": {
-    "node": ">=14.0.0"
-  },
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
@@ -44,7 +41,6 @@
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "node-gyp": "^9.0.0"
+    "typescript": "^5"
   }
 }
